--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
     </div>
 
   </main>
-  <script src="script.js"></script>
+  <script src="js/index.js" type="module"></script>
 </body>
 </html>
